reorg on the navigation

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,8 @@
 <ul class="main-navigation">
+  <li><a href="http://www.meetup.com/Windy-City-Perl-mongers-Meetup/" target="_blank">Meetup</a></li>
   <li><a href="{{ root_url }}/about">About</a></li>
+  <li><a href="{{ root_url }}/about#lists">Mailing Lists</a></li>
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
   <li><a href="{{ root_url }}/howto">Site HowTo</a></li>
-  <li><a href="http://www.meetup.com/Windy-City-Perl-mongers-Meetup/" target="_blank">Meetup</a></li>
 </ul>
