s/WindyCity.*PM/ChicagoPM/g

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main-navigation">
-  <li><a href="http://www.meetup.com/Windy-City-Perl-mongers-Meetup/" target="_blank">Meetup</a></li>
+  <li><a href="http://www.meetup.com/ChicagoPM/" target="_blank">Meetup</a></li>
   <li><a href="{{ root_url }}/about">About</a></li>
   <li><a href="{{ root_url }}/about#lists">Mailing Lists</a></li>
   <li><a href="{{ root_url }}/">Blog</a></li>
